Fix Media.Video.KeyFrameDistance metric calculation

BUG=678108
TEST=manual

Review-Url: https://codereview.chromium.org/2614583002
Cr-Commit-Position: refs/heads/master@{#441381}

Former-commit-id: 1b539730c8c3ce51ec2f58a3aae2a43af4f32eaa